tests/baselines/reference/recursiveIntersectionTypes.errors.txt
tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts(19,1): error TS2322: Type 'LinkedList<Entity>' is not assignable to type 'LinkedList<Product>'.
  Property 'price' is missing in type 'LinkedList<Entity>' but required in type 'Product'.


==== tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts (1 errors) ====
    type LinkedList<T> = T & { next: LinkedList<T> };
    
    interface Entity {
        name: string;
    }
    
    interface Product extends Entity {
        price: number;
    }
    
    var entityList: LinkedList<Entity>;
    var s = entityList.name;
    var s = entityList.next.name;
    var s = entityList.next.next.name;
    var s = entityList.next.next.next.name;
    
    var productList: LinkedList<Product>;
    entityList = productList;
    productList = entityList;  // Error
    ~~~~~~~~~~~
!!! error TS2322: Type '{|LinkedList|0|}<{|Entity|1|}>' is not assignable to type '{|LinkedList|2|}<{|Product|3|}>'.
!!! error TS2322:   Property 'price' is missing in type 'LinkedList<Entity>' but required in type 'Product'.
!!! related TS2728 tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts:8:5: 'price' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts:1:6
!!! annotated symbol 1 tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts:3:11
!!! annotated symbol 2 tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts:1:6
!!! annotated symbol 3 tests/cases/conformance/types/intersection/recursiveIntersectionTypes.ts:7:11
    